<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gestion Entreprise</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mois_a_afficher">Mois à afficher</string>
    <string name="depuis_le">Depuis le</string>
    <string name="jusqu_a">Jusqu\'à</string>
    <string name="ajouter_prestation">Ajouter Prestation</string>
    <string name="moyen_de_paiement">Moyen</string>
    <string name="chiffre_affaires">Chiffre d\'affaires</string>
    <string name="total">Total</string>
    <string name="zero">0</string>
    <string name="rafraichir">Rafraîchir</string>
    <string name="title_activity_ajout_prestation">Gestion Entreprise - Ajout de prestation</string>
    <string name="title_activity_detail_prestation">Gestion Entreprise - Détail de prestation</string>
    <string name="fermer_fenetre">Fermer la fenêtre</string>
    <string name="date">Date</string>
    <string name="client">Client</string>
    <string name="type_prestation">Type</string>
    <string name="tarif">Tarif</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="title_activity_liste_prestation">Gestion Entreprise - Liste de prestations</string>
    <string name="moyen">Moyen</string>
    <string name="modifier">Modifier</string>
    <string name="supprimer">Supprimer</string>
    <string name="action">Action</string>
    <string name="nouveau">Nouveau</string>
    <string name="title_activity_detail_client">DetailClientActivity</string>
    <string name="nom">Nom</string>
    <string name="prenom">Prénom</string>
    <string name="telephone">Téléphone</string>
    <string name="adresse">Adresse</string>
    <string name="code_postal">Code postal</string>
    <string name="ville">Ville</string>
    <string name="title_activity_liste_depense">Gestion Entreprise - Liste de dépenses</string>
    <string name="type">Type</string>
    <string name="cout">Coût</string>
    <string name="ajouter_depense">Ajouter Dépense</string>
    <string name="depenses">Dépenses</string>
    <string name="fermer">Fermer</string>
    <string name="title_activity_detail_depense">Gestion Entreprise - Détail de dépense</string>
    <string name="title_activity_suivi">Gestion Entreprise - Suivi</string>
    <string name="suivi">Suivi</string>
    <string name="de">De</string>
    <string name="a">A</string>
    <string name="title_activity_accueil">Gestion Entreprise - Accueil</string>
    <string name="prestation">Prestation</string>
    <string name="accueil">Accueil</string>
    <string name="title_activity_calendar">Gestion Entreprise - Calendrier</string>
    <string name="calendrier">Calendrier</string>
    <string name="h5">5h</string>
    <string name="h6">6h</string>
    <string name="h7">7h</string>
    <string name="h8">8h</string>
    <string name="h9">9h</string>
    <string name="h10">10h</string>
    <string name="h11">11h</string>
    <string name="h12">12h</string>
    <string name="h13">13h</string>
    <string name="h14">14h</string>
    <string name="h15">15h</string>
    <string name="h16">16h</string>
    <string name="h17">17h</string>
    <string name="h18">18h</string>
    <string name="h19">19h</string>
    <string name="h20">20h</string>
    <string name="h21">21h</string>
    <string name="h22">22h</string>
    <string name="h23">23h</string>
    <string name="Lundi">Lun</string>
    <string name="Mardi">Mar</string>
    <string name="Mercredi">Mer</string>
    <string name="Jeudi">Jeu</string>
    <string name="Vendredi">Ven</string>
    <string name="Samedi">Sam</string>
    <string name="Dimanche">Dim</string>
    <string name="some_events">Some events</string>
    <string name="cal_fond_pair">#66ECF6CE</string>
    <string name="cal_fond_impair">#66CECEF6</string>
    <string name="precedent">Précédent</string>
    <string name="suivant">Suivant</string>
    <string name="title_activity_detail_rdv">Gestion Entreprise - Détail de rendez-vous</string>
    <string name="description">Description</string>
    <string name="duree">Durée</string>
    <string name="heure">Heure</string>
    <string name="comptabilise">Comptabilise</string>

</resources>