<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccueilActivity" >

    <Button
        android:id="@+id/aaPrestationBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/prestation" />

    <Button
        android:id="@+id/aaDepenseBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/depenses" />

    <Button
        android:id="@+id/aaSuiviBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/suivi" />

    <Button
        android:id="@+id/aaCalendrierBtn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/calendrier" />

</LinearLayout>