<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailPrestationActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tableauDateLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date" />

            <EditText
                android:id="@+id/dateFld"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="date" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/clientLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client" />

            <AutoCompleteTextView
                android:id="@+id/clientFld"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10" />

            <Button
                android:id="@+id/newClientBtn"
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nouveau" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/typePrestationLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/type_prestation" />

            <Spinner
                android:id="@+id/typePrestationFld"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tarifLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tarif" />

            <EditText
                android:id="@+id/tarifFld"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/moyenDePaiementLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/moyen_de_paiement" />

            <Spinner
                android:id="@+id/detailPrestationMoyenDePaiementFld"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/comptabiliseLbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comptabilise" />

            <CheckBox
                android:id="@+id/comptabiliseFld"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
       
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/detailPrestationEnregistrerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enregistrer" />

            <Button
                android:id="@+id/fermerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fermer_fenetre" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>